New strings for Firefox 1:4

--- a/da/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/da/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -103,13 +103,15 @@ panic-button.tooltiptext = Glem noget af din browserhistorik
 web-apps-button.label = Apps
 web-apps-button.tooltiptext = Find nye apps
 
-loop-call-button2.label = Start en samtale
-loop-call-button2.tooltiptext = Start en samtale
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Start en samtale
 
 social-share-button.label = Del denne side
 social-share-button.tooltiptext = Del denne side
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = Åbn WebIDE
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Åbn WebIDE (%S)
