--- a/da/browser/chrome/browser/devtools/gclicommands.properties
+++ b/da/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,10 @@ helpDesc=Få hjælp til de tilgængelige kommandoer
 # explain the contents of the command help table.
 helpAvailable=Tilgængelige kommandoer
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=Kommandoen '%1$S' er ikke tilgængelig i multiproces-tilstand (E10S)
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=Håndter styring af konsollen
