--- a/da/browser/chrome/browser/browser.properties
+++ b/da/browser/chrome/browser/browser.properties
@@ -295,7 +295,7 @@ identity.identified.verified_by_you=Du har tilføjet en sikkerhedsundtagelse til
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=Forbindelsen til dette websted er sikker.
-identity.mixed_display_loaded=Forbindelsen til dette websted er kun delvist sikker, fordi webstedet indeholder ukrypteret indhold (fx billeder).
+identity.broken_loaded=Forbindelsen til dette websted er kun delvist sikker, fordi webstedet indeholder ukrypteret indhold (fx billeder) eller fordi krypteringen ikke er stærk nok.
 identity.mixed_active_loaded2=Dette websted indeholder interaktivt indhold, der ikke er krypteret (fx scripts). Andre kan se dine informationer eller ændre webstedets opførsel.
 identity.unencrypted=Din forbindelse til dette websted er ikke krypteret.
 
