--- a/pt-BR/suite/chrome/mailnews/imapMsgs.properties
+++ b/pt-BR/suite/chrome/mailnews/imapMsgs.properties
@@ -12,88 +12,116 @@
 # Status - opening folder
 
 # Status - create folder
+imapStatusCreatingMailbox=Criando pasta...
 
 # Status - deleting a folder
 # LOCALIZATION NOTE (imapStatusDeletingMailbox): The "%S" below should not be translated.
 # Instead, insert "%S" in your translation where you wish to display the name
 # of the folder being deleted.
+imapStatusDeletingMailbox=Excluindo pasta %S...
 
 # Status - renaming mailbox
 # LOCALIZATION NOTE (imapStatusRenamingMailbox): The "%S" below should not be translated.
 # Instead, insert "%S" in your translation where you wish to display the name
 # of the folder being renamed.
+imapStatusRenamingMailbox=Renomeando pasta %S...
 
 # Status - looking for mailboxes
+imapStatusLookingForMailbox=Procurando por pastas...
 
 # Status - subscribing to mailbox
 # LOCALIZATION NOTE (imapStatusSubscribeToMailbox): The "%S" below should not be translated.
 # Instead, insert "%S" in your translation where you wish to display the name
 # of the folder being subscribed to.
+imapStatusSubscribeToMailbox=Inscrever a pasta %S...
 
 # Status - unsubscribing from mailbox
 # LOCALIZATION NOTE (imapStatusUnsubscribeMailbox): The "%S" below should not be translated.
 # Instead, insert "%S" in your translation where you wish to display the name
 # of the folder being unsubscribed from.
+imapStatusUnsubscribeMailbox=Cancelando a inscrição da pasta %S...
 
 # Status - searching imap folder
+imapStatusSearchMailbox=Pesquisando pasta...
 
 # Status - closing a folder
+imapStatusCloseMailbox=Fechando pasta...
 
 # Status - compacting a folder
+imapStatusExpungingMailbox=Otimizando pasta...
 
 # Status - logging out
+imapStatusLoggingOut=Deslogando...
 
 # Status - checking server capabilities
+imapStatusCheckCompat=Verificando as propriedades do servidor de mail...
 
 # Status - logging on
 
 # Status - auth logon
 
 # Status - downloading message
+imapDownloadingMessage=Recebendo mensagem...
 
 # Status - getting acl for folder
 # LOCALIZATION NOTE (imapGettingACLForFolder): Do not translate the word "ACL" below.
+imapGettingACLForFolder=Recebendo a pasta ACL...
 
 # Status - getting server info
+imapGettingServerInfo=Recebendo as informações da configuração do servidor...
 
 # Status - getting mailbox info
+imapGettingMailboxInfo=Recebendo as informações da configuração da caixa de mensagens...
 
 # Status - empty mime part
+imapEmptyMimePart=O conteúdo da mensagem será carregado quando for solicitado.
 
 # LOCALIZATION NOTE (imapReceivingMessageHeaders): Do not translate the word "%S" or "%lu" below.
 # Place the word %S in your translation where the name of the server should appear.
 # Place the word %lu where the number of headers should appear.
+imapReceivingMessageHeaders=%S Recebendo cabeçalhos da mensagem %lu/%lu
 
 # LOCALIZATION NOTE (imapReceivingMessageFlags): Do not translate the word "%S" or "%lu" below.
 # Place the word %S in your translation where the name of the server should appear.
 # Place the word %lu where the number of flags should appear.
+imapReceivingMessageFlags=%S Recebendo sinalizações da mensagem %lu/%lu
 
+imapDeletingMessages=Excluindo as mensagens...
 
+imapDeletingMessage=Excluindo a mensagem...
 
 # LOCALIZATION NOTE (imapMovingMessages): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
+imapMovingMessages=Movendo mensagens para %S...
 
 # LOCALIZATION NOTE (imapMovingMessage): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
+imapMovingMessage=Movendo a mensagem para %S...
 
 # LOCALIZATION NOTE (imapCopyingMessages): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
+imapCopyingMessages=Copiando mensagens para %S...
 
 # LOCALIZATION NOTE (imapCopyingMessage): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
+imapCopyingMessage=Copiando a mensagem para %S...
 
 # LOCALIZATION NOTE (imapFolderReceivingMessageOf): Do not translate the word "%S" or "%lu" below.
 # Place the word %S in your translation where the name of the folder should appear.
 # Place the word %lu where the number of headers should appear.
+imapFolderReceivingMessageOf=%S - Recebendo a mensagem %lu/%lu...
 
 # LOCALIZATION NOTE (imapDiscoveringMailbox): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
+imapDiscoveringMailbox=Pasta encontrada: %S
 
 # LOCALIZATION NOTE (imapEnterPasswordPrompt): Do not translate the word %S below.
 # Place the word "%S" in your translation where the email address
 # or the username should appear
+imapEnterPasswordPrompt=Forneça a senha de %S:
 
 # LOCALIZATION NOTE (imapServerNotImap4): Do not translate the word "IMAP4" below.
+imapServerNotImap4=O servidor de mail %S não é um servidor de mail IMAP4.
 
 # This is intentionally left blank.
 imapDone=
@@ -102,54 +130,84 @@ imapEnterPasswordPromptTitle=Senha do servidor de mensagens
 
 imapUnknownHostError=Não foi possível conectar-se ao servidor "%S".
 
+imapConnectionRefusedError=Não foi possível conectar-se ao servidor de mail %S. A conexão foi recusada.
 
 imapNetTimeoutError=A conexão a "%S" foi cancelada. O servidor está há muito tempo sem enviar informações.
 
 # Status - no messages to download 
 imapNoNewMessages=Não há novas mensagens no servidor
 
+imapDefaultAccountName=Mail para %S
 
+imapSpecialChar= O caracter %c está reservado pelo servidor IMAP. Por favor selecione outro nome.
 
+imapPersonalSharedFolderTypeName=Pasta particular
 
+imapPublicFolderTypeName=Pasta pública
 
+imapOtherUsersFolderTypeName=Pastas de outros usuários
 
+imapPersonalFolderTypeDescription=Este é uma pasta particular. Ela não é compartilhada.
 
+imapPersonalSharedFolderTypeDescription=Esta é uma pasta particular. Ela foi compartilhada.
 
+imapPublicFolderTypeDescription=Esta é uma pasta pública.
 
+imapOtherUsersFolderTypeDescription=Esta é uma pasta de mail compartilhada pelo usuário "%S".
 
+imapAclFullRights=Controle total
 
+imapAclLookupRight=Procurar
 
 imapAclReadRight=Lida
 
+imapAclSeenRight=Definir o estado lido/não lido
 
+imapAclWriteRight=Escrever
 
+imapAclInsertRight=Inserir (copiar)
 
+imapAclPostRight=Postar
 
+imapAclCreateRight=Criar subpasta
 
+imapAclDeleteRight=Excluir mensagens
 
+imapAclAdministerRight=Pasta administrativa
 
+imapServerDoesntSupportAcl=Este servidor não suporta pastas compartilhadas.
 
+imapAclExpungeRight=Marcar para exclusão
 
+imapServerDisconnected= O servidor %S desconectou. O servidor pode estar com problemas ou pode haver falha na rede.
 
 # LOCALIZATION NOTE (autoSubscribeText): %1$S is the imap folder.
 imapSubscribePrompt=Deseja inscrever-se em %1$S?
 
+imapServerDroppedConnection=Não foi possível conectar-se ao servidor IMAP. Você pode ter excedido o número máximo de conexões a este servidor. Neste caso, configure as propriedades avançadas do servidor IMAP para reduzir o número de conexões em cache.
 
+imapQuotaStatusFolderNotOpen=A informação sobre cotas não está disponível porque a pasta não está aberta.
 
+imapQuotaStatusNotSupported=Este servidor não suporta cotas.
 
+imapQuotaStatusNoQuota=Esta pasta não possui cotas para armazenamento.
 
 # Out of memory
+imapOutOfMemory=O programa está sem memória.
 
 # LOCALIZATION NOTE (imapCopyingMessageOf): Do not translate the word "%S" below.
 # Place the word %3$S in your translation where the name of the destination folder should appear.
 # Place the word %1$S where the currently copying message should appear.
 # Place the word %2$S where the total number of messages should appear.
+imapCopyingMessageOf=Copiando mensagem %1$S de %2$S para %3$S
 
 # LOCALIZATION NOTE (imapMoveFolderToTrash): Do not translate the word %S below.
 # "%S" is the name of the folder.
+imapMoveFolderToTrash=Tem certeza de que deseja excluir a pasta '%S'?
 
 # LOCALIZATION NOTE (imapDeleteNoTrash): Do not translate the word %S below.
 # "%S" is the name of the folder.
+imapDeleteNoTrash=A excluir desta pasta não poderá ser desfeita e excluirá todas as suas mensagens e subpastas. Tem certeza de que deseja excluir a pasta '%S'?
 
 imapDeleteFolderDialogTitle=Excluir pasta...
 
