[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/dataman/dataman.properties
+++ b/pt-BR/suite/chrome/common/dataman/dataman.properties
@@ -11,6 +11,7 @@ cookies.anyConnection.all=Qualquer tipo de conexão
 
 # permissions
 perm.cookie.label=Definir Cookies
+perm.geo.label=Compartilhar localização
 perm.image.label=Carregar imagens
 perm.popup.label=Abrir janelas popup
 
