--- a/pt-BR/suite/chrome/common/notification.properties
+++ b/pt-BR/suite/chrome/common/notification.properties
@@ -56,6 +56,7 @@ lwthemeInstallNotification.undoButton=Desfazer
 # LOCALIZATION NOTE (geolocation.shareLocation geolocation.dontShareThisRequest geolocation.alwaysShareForSite geolocation.neverShareForSite):
 #shareLocation is always visible, other entries are contextually relative to it
 #if this doesn't work for your language, use explicit Share or Allow/Block.
+geolocation.shareLocation=Compartilhar localização
 # LOCALIZATION NOTE (geolocation.learnMore): Use the unicode ellipsis char, \u2026,
 # or use "..." unless \u2026 doesn't suit traditions in your locale.
 
@@ -63,6 +64,7 @@ lwthemeInstallNotification.undoButton=Desfazer
 # LOCALIZATION NOTE (webnotifications.showForSession webnotifications.dontShowThisSession webnotifications.alwaysShowForSite webnotifications.neverShowForSite):
 #showForSession is always visible, other entries are contextually relative to it
 #if this doesn't work for your language, use explicit Show or Allow/Block.
+webNotifications.showForSession=Mostrar notificações
 
 # IndexedDB
 
