--- a/pt-BR/suite/chrome/browser/navigator.properties
+++ b/pt-BR/suite/chrome/browser/navigator.properties
@@ -50,20 +50,28 @@ searchFor=%S - Pesquisar na web: "%S"
 
 # Star button
 starButtonOn.tooltip=Editar este favorito
-starButtonOff.tooltip=&Adicionar esta página aos favoritos
+starButtonOff.tooltip=Adicionar esta página aos favoritos
 
 # Edit Bookmark UI
+editBookmarkPanel.pageBookmarkedTitle=A página foi adicionada aos favoritos
 editBookmarkPanel.pageBookmarkedDescription=O %S sempre lembrará desta página para você.
 editBookmarkPanel.bookmarkedRemovedTitle=Favorito excluído
+editBookmarkPanel.editBookmarkTitle=Editar este favorito
 
 # LOCALIZATION NOTE (editBookmark.removeBookmarks.label)
 # Semi-colon list of plural forms. Replacement for #1 is
 # the number of bookmarks to be removed.
 # If this causes problems with localization you can also do "Remove Bookmarks (#1)"
 # instead of "Remove #1 Bookmarks".
+editBookmark.removeBookmarks.label=Excluir favorito;Excluir #1 favoritos
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
+addKeywordTitleAutoFill=Pesquisar %S
 
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=Tema padrão do SeaMonkey
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=Este tema utiliza estilos e cores do sistema para se encaixar com outros aplicativos.
 
+extensions.modern@themes.mozilla.org.name=SeaMonkey Moderno
+extensions.modern@themes.mozilla.org.description=Um tema contemporâneo para todos os componentes.
 
