[browser] Bug 1105537 - Add string in prepartion for upcoming Loop improvements

--- a/fr/browser/chrome/browser/loop/loop.properties
+++ b/fr/browser/chrome/browser/loop/loop.properties
@@ -98,7 +98,8 @@ new_contact_button=Nouveau contact
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Nom
 new_contact_email_placeholder=Adresse électronique
-new_contact_phone_placeholder=Téléphone Firefox OS
+new_contact_fxos_phone_placeholder=Téléphone Firefox OS
+new_contact_phone_placeholder2=Téléphone
 
 contacts_blocked_contacts=Contacts bloqués
 
@@ -127,13 +128,8 @@ sync_contacts_button=Synchroniser les contacts
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Désolé, l'importation des contacts a échoué
-## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
-## fails and the user may need more help. In this item, don't translate the part between
-## {{..}} because this will be replaced by the label from import_failed_support_link_label.
-## This is displayed in the error field here:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description=Désolé, l'importation des contacts a échoué, veuillez consulter notre {{import_failed_support_link_label}} pour d'avantage d'aide
-import_failed_support_link_label=site d'assistance
+import_failed_description_some=Certains contacts n'ont pas pu être importés
+import_failed_support_button=Aide
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -307,6 +303,8 @@ rooms_list_copy_url_tooltip=Copier le lien
 rooms_list_delete_tooltip=Supprimer la conversation
 rooms_list_deleteConfirmation_label=Voulez-vous vraiment supprimer la conversation ?
 rooms_name_this_room_label=Nommer cette conversation
+rooms_name_this_room_tooltip2=Cliquer pour modifier le nom de la conversation
+rooms_name_change_failed_label=La conversation ne peut pas être renommée
 rooms_new_room_button_label=Démarrer une conversation
 rooms_only_occupant_label=Personne n'a encore rejoint la conversation.
 rooms_panel_title=Sélectionnez une conversation ou démarrez-en une nouvelle
@@ -315,3 +313,4 @@ rooms_room_full_call_to_action_nonFx_label=Téléchargez {{brandShortname}} pour
 rooms_room_full_call_to_action_label=En savoir plus sur {{clientShortname}} »
 rooms_room_joined_label=Quelqu'un a rejoint la conversation.
 rooms_room_join_label=Rejoindre la conversation
+rooms_signout_alert=Les conversations ouvertes vont être fermées
