[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/browser.properties
+++ b/fa/browser/chrome/browser/browser.properties
@@ -586,12 +586,18 @@ getUserMedia.sharingMenuMicrophoneWindow = %S (میکروفون و پنجره)
 getUserMedia.sharingMenuUnknownHost = مبدا نا‌شناخته
 
 # LOCALIZATION NOTE - %S is brandShortName
-slowStartup.message = %Sبه نظر آهسته می آید …برای…شروع
+slowStartup.message = %Sبه نظر آهسته می آید …برای…شروع.
+slowStartup.helpButton.label = یاد بگیرید که چطور سرعتش را بیشتر کنید
+slowStartup.helpButton.accesskey = ی
+slowStartup.disableNotificationButton.label = مجددا به من گفته نشود
+slowStartup.disableNotificationButton.accesskey = م
 
 
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
 # in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
 # be replaced with a hyperlink containing the text defined in customizeTips.tip0.learnMore.
+customizeTips.tip0 = %1$S شما میتوانید %2$S را شخصی سازی کنید تا به شیوه ای که شما میخواهید کار کند. به راحتی از بالا هر کدام را میخواهید باکشید و در منو یا نوار ابزار بگذارید, %3$S درباره شخصی سازی %2$S,
+customizeTips.tip0.hint = راهنمایی
 customizeTips.tip0.learnMore = بیشتر بدانید
 
 # LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
@@ -601,3 +607,4 @@ customizeTips.tip0.learnMore = بیشتر بدانید
 appmenu.restartNeeded.description = راه‌اندازی مجدد%S جهت اعمال به روز رسانی\u0020
 appmenu.updateFailed.description = به‌روز رسانی در پس زمینه با مشکل مواجه شده است, لطفا بروز‌رسانی را دریافت کنید
 appmenu.restartBrowserButton.label = راه‌اندازی مجدد %S
+appmenu.downloadUpdateButton.label = دریافت بروزرسانی
