--- a/fa/browser/chrome/browser/newTab.properties
+++ b/fa/browser/chrome/browser/newTab.properties
@@ -20,3 +20,5 @@ newtab.block=حذف این سایت
 # active link using string newtab.privacy.link as text.
 # LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window.
+newtab.intro.paragraph3=شما میتوانید ویژگی کاشی بندی را با کلیک روی دکمه %1$S غیر فعال کنید  اگر اینطور ترجیح میدهید.
+newtab.privacy.link=اخطار حفظ حریم خصوصی
