--- a/fa/browser/chrome/browser/loop/loop.properties
+++ b/fa/browser/chrome/browser/loop/loop.properties
@@ -162,6 +162,7 @@ call_progress_connecting_description=در حال اتصال…
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
 ## by the brand name.
+legal_text_privacy = اخطار حفظ حریم خصوصی
 
 ## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
 ## These 2 strings are displayed before and after a 'Telefonica'
