[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/shellservice.properties
+++ b/fa/browser/chrome/browser/shellservice.properties
@@ -7,6 +7,9 @@ safeModeLabel=%S &حالت امن
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = با تنظیم %S به عنوان جستجوگر پیشفرض خود بیشترین بهره را از ان ببرید
+setDefaultBrowserConfirm.label     = استفاده از %S به عنوان جستجوگر پیشفرض
+setDefaultBrowserConfirm.accesskey = ا
 setDefaultBrowserOptions.label     = گزینه‌ها
 setDefaultBrowserOptions.accesskey = گ
 setDefaultBrowserNever.label       = دیگر پرسیده نشود
