--- a/fa/browser/chrome/browser/downloads/downloads.properties
+++ b/fa/browser/chrome/browser/downloads/downloads.properties
@@ -45,6 +45,9 @@ stateDirty=متوقف شده: بارگیری ممکن است شامل ویروس
 # period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
 # this turns out to be longer than the other existing status strings.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=این فایل حاوی ویروس یا نرم افزار مخرب است.
+blockedPotentiallyUnwanted=این فایل امکان دارد به کامپیوترتان صدمه بزند.
+blockedUncommon=باز کردن این  فایل امکان دارد امن نباشد.
 
 # LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
 #                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
