--- a/uk/browser/chrome/browser/lightweightThemes.properties
+++ b/uk/browser/chrome/browser/lightweightThemes.properties
@@ -2,17 +2,17 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-lightweightThemes.recommended-1.name=A Web Browser Renaissance
-lightweightThemes.recommended-1.description=A Web Browser Renaissance is (C) Sean.Martell. Available under CC-BY-SA. No warranty.
+lightweightThemes.recommended-1.name=Ренесанс браузера
+lightweightThemes.recommended-1.description=Ренесанс браузера (C) Sean.Martell. Доступна на умовах CC-BY-SA. Без гарантій.
 
-lightweightThemes.recommended-2.name=Space Fantasy
-lightweightThemes.recommended-2.description=Space Fantasy is (C) fx5800p. Available under CC-BY-SA. No warranty.
+lightweightThemes.recommended-2.name=Космічна фантазія
+lightweightThemes.recommended-2.description=Космічна фантазія (C) fx5800p. Доступна на умовах CC-BY-SA. Без гарантій.
 
-lightweightThemes.recommended-3.name=Linen Light
-lightweightThemes.recommended-3.description=Linen Light is (C) DVemer. Available under CC-BY-SA. No warranty.
+lightweightThemes.recommended-3.name=Світле полотно
+lightweightThemes.recommended-3.description=Світле полотно (C) DVemer. Доступна на умовах CC-BY-SA. Без гарантій.
 
-lightweightThemes.recommended-4.name=Pastel Gradient
-lightweightThemes.recommended-4.description=Pastel Gradient is (C) darrinhenein. Available under CC-BY. No warranty.
+lightweightThemes.recommended-4.name=Пастельний градієнт
+lightweightThemes.recommended-4.description=Пастельний градієнт (C) darrinhenein. Доступна на умовах CC-BY. Без гарантій.
 
-lightweightThemes.recommended-5.name=Carbon Light
-lightweightThemes.recommended-5.description=Carbon Light is (C) Jaxivo. Available under CC-BY-SA. No warranty.
+lightweightThemes.recommended-5.name=Світлий графіт
+lightweightThemes.recommended-5.description=Світлий графіт (C) Jaxivo. Доступна на умовах CC-BY-SA. Без гарантій.
