--- a/pl/browser/chrome/browser/loop/loop.properties
+++ b/pl/browser/chrome/browser/loop/loop.properties
@@ -111,11 +111,11 @@ peer_ended_conversation2=Rozmówca zakończył połączenie.
 conversation_has_ended=Rozmowa zakończona
 restart_call=Połącz ponownie
 
-cannot_start_call_session_not_ready=Nie można rozpocząć rozmowy, sesja niegotowa.
+cannot_start_call_session_not_ready=Nie można rozpocząć rozmowy, sesja nie jest gotowa.
 network_disconnected=Połączenie sieciowe niespodziewanie zakończone.
 connection_error_see_console_notification=Nieudane połączenie (szczegóły można znaleźć w konsoli).
 
-legal_text_and_links3=Używając {{clientShortname}}, zgaszasz się na {{terms_of_use}} oraz {{privacy_notice}}.
+legal_text_and_links3=Używając {{clientShortname}}, zgadzasz się na {{terms_of_use}} oraz {{privacy_notice}}.
 legal_text_tos=warunki korzystania z usługi
 legal_text_privacy=politykę prywatności
 powered_by_beforeLogo=Obsługiwane przez
