--- a/ta/mobile/android/chrome/webcompatReporter.properties
+++ b/ta/mobile/android/chrome/webcompatReporter.properties
@@ -4,6 +4,9 @@
 
 # LOCALIZATION NOTE (webcompat.menu.name): A "site issue" is a bug, display,
 # or functionality problem with a webpage in the browser.
+webcompat.menu.name=தளத்தில் உள்ள சிக்கலை அறிவி
 
 # LOCALIZATION NOTE (webcompat.reportDesktopMode.message): A " site issue" is a
 # bug, display, or functionality problem with a webpage in the browser.
+webcompat.reportDesktopMode.message=தளத்தில் உள்ள சிக்கலை தெறிவிக்கவா?
+webcompat.reportDesktopModeYes.label=அறிக்கை
