[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -92,12 +92,17 @@ quit-button.tooltiptext.linux2 = خروج %1$S (%2$S)
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
+loop-call-button3.label = سلام
+loop-call-button3.tooltiptext = آغاز کردن مکالمه
 
+social-share-button.label = به‌اشتراک‌گذاری این صفحه
+social-share-button.tooltiptext = به‌اشتراک‌گذاری این صفحه
 
 panic-button.label = فراموش کردن
 panic-button.tooltiptext = فراموش کردن بعضی  تاریخچه مرورها
 
 web-apps-button.label = برنامه‌ها
+web-apps-button.tooltiptext = کشف برنامه‌ها
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
