--- a/fa/browser/chrome/browser/downloads/downloads.properties
+++ b/fa/browser/chrome/browser/downloads/downloads.properties
@@ -47,7 +47,7 @@ stateDirty=متوقف شده: بارگیری ممکن است شامل ویروس
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
 blockedMalware=این فایل حاوی ویروس یا نرم افزار مخرب است.
 blockedPotentiallyUnwanted=این فایل امکان دارد به کامپیوترتان صدمه بزند.
-blockedUncommon=باز کردن این  فایل امکان دارد امن نباشد.
+blockedUncommon=باز کردن این فایل امکان دارد امن نباشد.
 
 # LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
 #                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
@@ -57,6 +57,13 @@ blockedUncommon=باز کردن این  فایل امکان دارد امن نب
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=آیا مطمئنید که می‌خواهید این فایل مسدود شده را باز کنید؟
+unblockTypeMalware=این فایل حاوی ویروس یا نرم افزار مخرب است که به کامپیوترتان صدمه میزند.
+unblockTypePotentiallyUnwanted=این فایل، که دانلود مفیدی شناخته شده است، تغیرات پیش بینی نشده ای در برنامه ها و تنظیمات شما ایجاد میکند.
+unblockTypeUncommon=این فایل از یک وبسایت نا آشنا که امکان دارد مخرب باشد دانلود شده است و باز کردن آن امکان دارد امن نباشد.
+unblockTip=شما میتوانید به دنبال منبع دانلود دیگری بگردید یا وقت دیگری مجددا تلاش کنید که آن را دانلود کنید.
+unblockButtonContinue=در هر صورت رفع انسداد کن
+unblockButtonCancel=مرا در شرایط امن نگاه دار
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
@@ -96,3 +103,4 @@ fileExecutableSecurityWarningDontAsk=دیگر از شما پرسیده نشود
 # there are more downloads than can fit in the list in the panel. Use a
 # semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/Localization_and_Plurals
+otherDownloads2=+%1$S دانلود دیگر؛ +%1$S دانلود دیگر
