--- a/fa/browser/chrome/browser/places/places.properties
+++ b/fa/browser/chrome/browser/places/places.properties
@@ -27,6 +27,16 @@ sortByName=مرتب‌سازی «%S» بر حسب نام
 # When any of these changes, all of the properties must be bumped, and the
 # change must be annotated here.  Both label and accesskey must be updated.
 # - version 1: changed view.sortBy.1.date.
+view.sortBy.1.keyword.label=مرتب کردن بر اساس کلمه کلیدی
+view.sortBy.1.keyword.accesskey=ک
+view.sortBy.1.description.label=مرتب کردن بر اساس توضیحات
+view.sortBy.1.description.accesskey=ت
+view.sortBy.1.dateAdded.label=مرتب کردن بر اساس اضافه شدن
+view.sortBy.1.dateAdded.accesskey=ش
+view.sortBy.1.lastModified.label=مرتب کردن بر اساس آخرین تغییر
+view.sortBy.1.lastModified.accesskey=ت
+view.sortBy.1.tags.label=مرتب‌سازی بر اساس برچسبها
+view.sortBy.1.tags.accesskey=ب
 
 searchBookmarks=جست‌وجو در نشانک‌ها
 searchHistory=جست‌وجو در تاریخچه
