--- a/fa/browser/chrome/browser/loop/loop.properties
+++ b/fa/browser/chrome/browser/loop/loop.properties
@@ -188,3 +188,4 @@ feedback_back_button=عقب
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
+rooms_new_room_button_label=آغاز کردن مکالمه
