--- a/fa/browser/chrome/browser/syncSetup.properties
+++ b/fa/browser/chrome/browser/syncSetup.properties
@@ -35,6 +35,7 @@ passwordsCount.label        = #1 گذرواژه
 # LOCALIZATION NOTE (addonsCount.label): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of add-ons, see the link above for forms
+addonsCount.label        = #1 افزونه;#1 افزونه‌
 
 save.recoverykey.title = ذخیرۀ کلید بازیابی
 save.recoverykey.defaultfilename = کلید بازیابی فایرفاکس.html
@@ -52,8 +53,14 @@ existingAccount.change.label = برای تغییر این مورد دکمهٔ گ
 # Firefox Accounts based setup.
 continue.label = ادامه
 disconnect.verify.title = قطع ارتباط
+disconnect.verify.heading = آیا مطمئن هستید؟
 # LOCALIZATION NOTE (disconnect.verify.description): %S will be replaced with
 # brandShortName
+disconnect.verify.description = %S هم‌گام‌سازی با حساب شما را متوقف میکند. ولی اصلا اطلاعات جستجوی شما را از روی این کامپیوتر پاک نمیکند.
 
+relinkVerify.title = اخطار ادغام
+relinkVerify.heading = آیا مطمئنید که می‌خواهید برای هم‌گام‌سازی وارد شوید؟
 # LOCALIZATION NOTE (relinkVerify.description): Email address of a user previously signed into sync.
+relinkVerify.description = کاربر دیگری قبلا برای هم‌گام‌سازی به این کامپیوتر وارد شده است. با وارد شدن شما نشانک ها و رمزهای جستجوگر با تنظیمات %S ادغام میشود.
 
+manage.pageTitle = مدیریت هم‌گام‌سازی
