[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/loop/loop.properties
+++ b/fa/browser/chrome/browser/loop/loop.properties
@@ -6,14 +6,19 @@
 
 ## LOCALIZATION NOTE(clientShortname2): This should not be localized and
 ## should remain "Firefox Hello" for all locales.
+clientShortname2=سلام فایرفاکس
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
+first_time_experience_title={{clientShortname}}— ورود به مکالمه
 
+share_link_header_text=این لینک را به اشتراک بگذار تا کسی را به مکالمه دعوت کنی:
+invite_header_text=کسی را به مکالمه دعوت کن.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
 ## Click the label icon at the end of the url field.
+invitee_name_label=چه کسی را دعوت میکنید؟
 ## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
 ## the expiry time. Click the label icon at the end of the url field to see where
 ## this is:
@@ -30,11 +35,20 @@
 ## In this item, don't translate the part between {{..}}
 
 # Status text
+display_name_available_status=در دسترس
 
 # Error bars
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+unable_retrieve_url=متاسفیم قادر به بازیابی URL تماس نیستیم.
+session_expired_error_description=نشست باطل شده است. تمام URLs که قبلا ایجاد کرده و به اشتراک گذشته بودید دیگر قابل استفاده نمیباشند.
+could_not_authenticate=قادر به اعتبارسنجی نیست
+password_changed_question=آیا رمز عبورتان را عوض کرده اید؟
+try_again_later=لطفاً بعدا دوباره امتحان کنید
+could_not_connect=قادر به اتصال به سرور نیست
+check_internet_connection=لطفا تماس اینترنتی خود را چک نمایید
+login_expired=ورود شما منقضی شده است
 
 ## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
 ## the appropriate action.
@@ -43,9 +57,15 @@
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
 copy_url_button=رونوشت برداشتن
+copy_url_button2=کپی برداری از پیوند
+copied_url_button=کپی شد!
 
+panel_footer_signin_or_signup_link=ورود یا عضویت
 
+settings_menu_item_settings=تنظیمات
+settings_menu_item_signout=خروج
 settings_menu_item_signin=ورود
+settings_menu_button_tooltip=تنظیمات
 
 # Contact Strings (Panel)
 
@@ -61,6 +81,7 @@ contacts_search_placesholder=جست‌وجو…
 ## These are the placeholders for the fields for entering a new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=نام
 
 
 ## LOCALIZATION NOTE (add_contact_button):
@@ -83,14 +104,20 @@ importing_contacts_progress_button=در حال وارد کردن…
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description_simple=متاسفیم وارد کردن مشترک نا موافق بود
+import_failed_description_some=قادر به وارد کردن بعضی از مشترکین نمیباشد
+import_failed_support_button=راهنما
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+remove_contact_menu_button=حذف مشترک
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
+confirm_delete_contact_alert=آیا مطمئنید که می‌خواهید این مشترک را حذف کنید؟
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=حذف مشترک
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
