--- a/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -107,3 +107,4 @@ web-apps-button.tooltiptext = کشف برنامه‌ها
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
