[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/loop/loop.properties
+++ b/fa/browser/chrome/browser/loop/loop.properties
@@ -118,13 +118,16 @@ confirm_delete_contact_alert=آیا مطمئنید که می‌خواهید ای
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
 confirm_delete_contact_remove_button=حذف مشترک
+confirm_delete_contact_cancel_button=انصراف
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
 ## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+block_contact_menu_button=مسدود کردن مشترک
 ## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to unblock a contact and allow them
 ## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+unblock_contact_menu_button=باز کردن مشترک مسدود شده
 
 ## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -151,8 +154,17 @@ edit_contact_done_button=انجام شد
 
 # Conversation Window Strings
 
+incoming_call_title2=درخواست مکالمه
+incoming_call_accept_button=پذیرفتن
+incoming_call_accept_audio_only_tooltip=پذیرفتن با صدا
+incoming_call_accept_audio_video_tooltip=پذیرفتن با ویدئو
+incoming_call_cancel_button=انصراف
+incoming_call_cancel_and_block_button=انصراف و مسدود کردن
 incoming_call_block_button=باز داشتن
+hangup_button_title=قطع کردن
 hangup_button_caption2=خروج
+mute_local_audio_button_title=قطع کردن صدایتان
+unmute_local_audio_button_title=وصل کردن صدایتان
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
 ## when calling a contact. Don't translate the part between {{..}} because
@@ -171,18 +183,26 @@ call_progress_connecting_description=در حال اتصال…
 ## when the other client is actually ringing.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
 
+conversation_has_ended=مکالمه شما تمام شد.
+restart_call=تماس مجدد
 
+generic_failure_title=یک جا اشتباهی پیش آمده است.
+generic_failure_with_reason2=شما میتوانید مجددا تلاش کنید یا یک لینک پیوند را ایمیل کنید تا بعدا با شما تماس گرفته شود.
+generic_failure_no_reason2=آیا میخواهید مجددا تلاش کنید؟
 
 ## LOCALIZATION NOTE (contact_offline_title): Title for
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 ## displayed when the contact is offline.
+contact_offline_title=این فرد آنلاین نمیباشد
 ## LOCALIZATION NOTE (call_timeout_notification_text): Title for
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 ## displayed when the call didn't go through.
+call_timeout_notification_text=تماس شما برقرار نشد.
 
 ## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=تلاش مجدد
 
 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
@@ -196,6 +216,15 @@ legal_text_privacy = اخطار حفظ حریم خصوصی
 ## logo.
 powered_by_afterLogo=
 
+feedback_call_experience_heading2=مکالمه شما چطور بود؟
+feedback_what_makes_you_sad=چه چیزی شما را ناراحت کرده است؟
+feedback_thank_you_heading=از بازخورد شما متشکریم!
+feedback_category_audio_quality=کیفیت صدا
+feedback_category_video_quality=کیفیت ویدئو
+feedback_category_was_disconnected=\u0020قطع شد
+feedback_category_confusing=گیج کننده
+feedback_category_other=غیره:
+feedback_custom_category_text_placeholder=چه مشکلی بود؟
 feedback_back_button=عقب
 ## LOCALIZATION NOTE (feedback_window_will_close_in2):
 ## Semicolon-separated list of plural forms. See:
@@ -210,9 +239,17 @@ feedback_back_button=عقب
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_list_copy_url_tooltip=کپی پیوند
 ## LOCALIZATION NOTE (rooms_list_current_conversations):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
+rooms_list_current_conversations=مکالمه حاضر؛مکالمات حاضر
+rooms_list_delete_tooltip=پاک کردن مکالمه
+rooms_list_deleteConfirmation_label=آیا اطمینان دارید؟
+rooms_list_no_current_conversations=مکالمه ای در جریان نیست
+rooms_name_this_room_label=نام گذاری این مکالمه
+rooms_name_this_room_tooltip2=برای ویرایش نام مکالمه کلیک کنید
+rooms_name_change_failed_label=نمیتوان مکالمه را تغیر نام داد
 rooms_new_room_button_label=آغاز کردن مکالمه
