[hy-AM] update from Pootle (firefox)

--- a/hy-AM/browser/chrome/browser/tabview.properties
+++ b/hy-AM/browser/chrome/browser/tabview.properties
@@ -6,7 +6,7 @@ tabview.button.searchTabs=Փնտրել ներդիրների խմբում
 tabview.button.exitTabGroups=Դուրս գալ խմբից
 tabview.groupItem.defaultName=Անվանել այս խումբը…
 tabview.groupItem.closeGroup=Փակել խումբը
-tabview.groupItem.undoCloseGroup=Ետարկել խումբը
+tabview.groupItem.undoCloseGroup=Հետարկել խումբը
 tabview.groupItem.discardClosedGroup=Փակ խմբի վերացում
 tabview.search.otherWindowTabs=Ներդիրներ այլ պատուհաններից
 tabview.notification.sessionStore=Ներդիրները և խմբերը կվերականգվեն %S-ի հաջորդ մեկնարկի ժամանակ։
