[ta] update from Pootle (firefox)

--- a/ta/dom/chrome/layout/css.properties
+++ b/ta/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=நீட்டிப்பு அமைப்பிற
 PECounterASWeight=முற்தைய கனத்தைவிட கூடுதலான-குறியீடுகள் விளக்கியின் ஒவ்வொரு கனமும் குறைவாக இருக்க வேண்டும்.
 PEClassSelEOF=வகுப்பு பெயர்
 PEClassSelNotIdent=வகுப்பு தேர்விக்கு அடையாளம் காட்டி எதிர்பார்க்கப்பட்டது ஆனால் கண்டுபிடிக்கப்பட்டது '%1$S'.
+PECoordinatePair=ஒருங்கிணை எதிர்பார்க்கப்பட்டது ஆனால் கண்டுபிடிக்கப்பட்டது '%1$S'.
 PETypeSelEOF=உருப்படி வகை
 PETypeSelNotType=எதிர்பார்க்கபட்ட உருப்படி பெயர் அல்லது '*' ஆனால் கண்டுபிடிக்கப்பட்டது'%1$S'.
 PEUnknownNamespacePrefix=தெரியாத பெயரிடைவெளி முன்னொட்டு '%1$S'.
@@ -105,6 +106,9 @@ PEColorSaturationEOF=சாச்சுரேஷன்
 PEColorLightnessEOF=மிதமான
 PEColorOpacityEOF=ஒளிபுகு தன்மை நிற மதிப்பு
 PEExpectedNumber=எதிர்பார்க்கப்பட்டது ஒரு எண் ஆனால் கண்டுபிடிக்கப்பட்டது '%1$S'.
+PEPositionEOF=<position>
+PEExpectedPosition=<position> எதிர்பார்க்கப்பட்டது ஆனால் கண்டுபிடிக்கப்பட்டது '%1$S'.
+PEExpectedRadius=ஆரம் எதிர்பார்க்கப்பட்டது ஆனால் '%1$S' கண்டுபிடிக்கப்பட்டது.
 PEExpectedCloseParen=எதிர்பார்க்கப்பட்டது ')' ஆனால் கண்டுபிடிக்கப்பட்டது '%1$S'.
 PEDeclEndEOF=';' அல்லது '}' அறிவிப்பின் முடிவில்
 PEParseDeclarationNoColon=எதிர்பார்க்கப்பட்டது ':' ஆனால் காணப்பட்டது '%1$S'.
