--- a/ta/dom/chrome/security/security.properties
+++ b/ta/dom/chrome/security/security.properties
@@ -9,10 +9,13 @@ CrossSiteRequestBlocked=தோற்ற இடைமாற்ற கோர
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=பயண-பாகுகாப்பு-கண்டிப்பின் தலைப்பானது செல்லாதது என்பதை தளத்தில் குறிப்பிட்டுள்ளது.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=இத்தளம் ஆதிரிக்காத ஒரு பொதுவான விசை குறியடங்கிய தலைப்பகுதியை குறிப்பிட்டது.
 # LOCALIZATION NOTE: Do not translate "SHA-1"
+SHA1Sig=இத்தளம் SHA-1 சான்றிதழைப் பயன்படுத்திக்கொள்கிறது; கையொப்ப நெறிமுறைகளுடன் SHA-1 விட ஹேஷ் செல்பாடுகளை வழுவாகப் பயன்படுத்தும் சான்றிதழ்களைப் பயன்னடுத்துமாறு வலியுறுத்தப்படுகிறது.
 InsecurePasswordsPresentOnPage=கடவுச்சொல் புலங்கள் ஒரு பாதுகாப்பற்ற (http://) பக்கத்தில் உள்ளன. இது பயனரின் புகுபதிவு அங்கீகாரச் சான்றுகளைத் திருடக்கூடிய வாய்ப்புள்ள ஒரு பாதுகாப்பு தொடர்பான ஆபத்தாகும்.
 InsecureFormActionPasswordsPresent=கடவுச்சொல் புலங்கள் ஒரு பாதுகாப்பற்ற (http://) படிவ செயலைக் கொண்டுள்ள ஒரு படிவத்தில் உள்ளன. இது பயனரின் புகுபதிவு அங்கீகாரச் சான்றுகளைத் திருடக்கூடிய வாய்ப்புள்ள ஒரு பாதுகாப்பு தொடர்பான ஆபத்தாகும்.
 InsecurePasswordsPresentOnIframe=கடவுச்சொல் புலங்கள் ஒரு பாதுகாப்பற்ற (http://) iframe இல் உள்ளன. இது பயனரின் புகுபதிவு அங்கீகாரச் சான்றுகளைத் திருடக்கூடிய வாய்ப்புள்ள ஒரு பாதுகாப்பு தொடர்பான ஆபத்தாகும்.
 LoadingMixedActiveContent=ஒரு பாதுகாப்பான பக்கத்தில் கலப்பான (பாதுகாப்பற்ற) செயலில் உள்ள உள்ளடக்கத்தை ஏற்றுகிறது "%1$S"
 LoadingMixedDisplayContent=ஒரு பாதுகாப்பான பக்கத்தில் கலப்பான (பாதுகாப்பற்ற) காட்சி உள்ளடக்கத்தை ஏற்றுகிறது "%1$S"
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=ஒரு iframe ஆனது allow-scripts மற்றும் allow-same-origin sandbox பண்புக் கூறுக்கு வைத்திருந்தால் அதன் sandboxing நீக்க முடியும்.
