[sv-SE] update from Pootle (firefox)

--- a/sv-SE/security/manager/chrome/pippki/pippki.properties
+++ b/sv-SE/security/manager/chrome/pippki/pippki.properties
@@ -76,8 +76,10 @@ pageInfo_Privacy_None3=Sidan som visas är inte krypterad.
 # LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Anslutning krypterad (%1$S, %2$S bitar, %3$S)
 pageInfo_Privacy_Encrypted1=Sidan som visas krypterades innan den skickades över Internet.
 pageInfo_MixedContent=Anslutningen är delvis krypterad
+pageInfo_Privacy_Broken1=Delar av sidan som visas var inte krypterad eller krypteringen är inte tillräckligt stark innan den skickades över internet.
 
 #Cert Viewer
 certDetails=Certifikatvisaren:
@@ -141,15 +143,20 @@ writeFileNoDeviceSpace=Inget utrymme kvar på enheten
 writeFileUnknownError=Okänt fel
 
 #Add Security Exception dialog
-addExceptionBrandedWarning2=Du håller på att åsidosätta sättet som %S identifierar den här platsen på.
-addExceptionInvalidHeader=Den här platsen försöker identifiera sig med ogiltig information.
-addExceptionDomainMismatchShort=Fel plats
+addExceptionBrandedWarning2=Du håller på att åsidosätta hur %S identifierar denna webbplats.
+addExceptionInvalidHeader=Den här webbplatsen försöker identifiera sig med ogiltig information.
+addExceptionDomainMismatchShort=Fel webbplats
+addExceptionDomainMismatchLong2=Certifikatet tillhör en annan webbplats, vilket skulle kunna innebära att någon försöker imitera denna webbplats.
 addExceptionExpiredShort=Föråldrad information
+addExceptionExpiredLong2=Certifikatet är inte giltigt. Det kan ha blivit stulet eller förlorat och kan användas av någon att imitera denna webbplats.
 addExceptionUnverifiedOrBadSignatureShort=Okänd identitet
+addExceptionUnverifiedOrBadSignatureLong2=Certifikatet är inte betrott eftersom det inte har verifierats av en betrodd certifikatutfärdare med hjälp av en säker signatur.
 addExceptionValidShort=Giltigt certifikat
 addExceptionValidLong=Platsen har presenterat en giltig och verifierad identifikation.  Du behöver inte lägga till något undantag.
 addExceptionCheckingShort=Kontrollerar information
+addExceptionCheckingLong2=Försöker att identifiera webbplatsen…
 addExceptionNoCertShort=Ingen information tillgänglig
+addExceptionNoCertLong2=Kunde inte erhålla identifieringsstatus för webbplatsen.
 addExceptionConnectionFailed=Anslutningen misslyckades
 
 #Certificate Exists in database
