--- a/sv-SE/webapprt/webapprt/overrides/appstrings.properties
+++ b/sv-SE/webapprt/webapprt/overrides/appstrings.properties
@@ -30,5 +30,6 @@ externalProtocolChkMsg=Kom ihåg mitt val för alla länkar av den här typen.
 externalProtocolLaunchBtn=Kör program
 malwareBlocked=Platsen %S är anmäld som en skadlig webbplats och har därför blockerats enligt dina säkerhetsinställningar.
 phishingBlocked=Webbplatsen %S är anmäld som en webbförfalskning avsedd att lura av användare personliga eller finansiella uppgifter.
+cspBlocked=Programmet försökte komma åt en resurs som har en säkerhetspolicy för innehåll som förhindrar att den laddas på detta sätt.
 corruptedContentError=Programmet kan inte fortsätta på grund av att ett fel i dataöverföringen upptäcktes.
 remoteXUL=Programmet försökte använda en teknik som inte längre stöds.
