[ta] update from Pootle (firefox)

--- a/ta/browser/chrome/browser/loop/loop.properties
+++ b/ta/browser/chrome/browser/loop/loop.properties
@@ -309,3 +309,10 @@ rooms_name_this_room_tooltip2=உரையாடலின் பெயரை த
 rooms_name_change_failed_label=உரையாடலை மறுபெயரிட முடியாது
 rooms_new_room_button_label=உரையாடுதலை துவக்கு
 rooms_only_occupant_label=இங்கு நீங்கள் தான் முதல் நபர்.
+rooms_panel_title=ஒரு உரையாடலை தேர் அல்லது புதிதாக துவங்கு
+rooms_room_full_label=ஏற்கனவே இங்கு இரண்டு நபர்கள் உரையாடலில் உள்ளனர்.
+rooms_room_full_call_to_action_nonFx_label={{brandShortname}} பதிவிறக்கி நீங்களாகவே துவங்கவும்
+rooms_room_full_call_to_action_label={{clientShortname}} பற்றி மேலும் அறியவும் »
+rooms_room_joined_label=யாரோ ஒருவர் உரையாடலில் இணைந்துள்ளனர்!
+rooms_room_join_label=உரையாடலில் இணையவும்
+rooms_signout_alert=திறந்த உரையாடல்கள் மூடப்படும்
