[ta] update from Pootle (firefox)

--- a/ta/browser/chrome/browser/devtools/app-manager.properties
+++ b/ta/browser/chrome/browser/devtools/app-manager.properties
@@ -2,6 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+index.deprecationNotice=வருங்கால வெளியீடுகளில் பயன்பாடு மேலாளர் நீக்கப்படும்.  உங்கள் திட்டங்கள் WebIDE விற்கு இடமாற்றப்படும்.
+index.launchWebIDE=WebIDE தொடங்கு
+index.readMoreAboutWebIDE=மேலும் படிக்க
 # LOCALIZATION NOTE (device.deviceSize): %1$S is the device's width, %2$S is
 # the device's height, %3$S is the device's pixel density.
 # Example: 800x480 (86 DPI).
