--- a/ta/browser/chrome/browser/devtools/gclicommands.properties
+++ b/ta/browser/chrome/browser/devtools/gclicommands.properties
@@ -22,6 +22,7 @@ helpAvailable=இருக்கும் கட்டளைகள்
 
 # LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
 # is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=பண் செயல் முறைமைகளில் (E10S) '%1$S' கட்டளை இல்லை.
 
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
