[hy-AM] update from Pootle (firefox)

--- a/hy-AM/browser/chrome/browser/loop/loop.properties
+++ b/hy-AM/browser/chrome/browser/loop/loop.properties
@@ -46,7 +46,7 @@ display_name_available_status=Հասանելի
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-session_expired_error_description=Շրջանը ավարտվել է: Բոլոր URL-ները, որոնց ստեղծել եք և տարածել, այլևս չեն աշխատի:
+session_expired_error_description=Շրջանը ավարտվել է: Բոլոր URL-ները, որոնց ստեղծել եք և համաօգտագործել, այլևս չեն աշխատի:
 could_not_authenticate=Հնարավոր չէ իսկորոշել
 password_changed_question=Փոխե՞լ եք գաղտնաբառը:
 try_again_later=Կրկին փորձեք
