--- a/sv-SE/mobile/android/chrome/webcompatReporter.properties
+++ b/sv-SE/mobile/android/chrome/webcompatReporter.properties
@@ -4,7 +4,9 @@
 
 # LOCALIZATION NOTE (webcompat.menu.name): A "site issue" is a bug, display,
 # or functionality problem with a webpage in the browser.
+webcompat.menu.name=Rapportera en hemside bugg
 
 # LOCALIZATION NOTE (webcompat.reportDesktopMode.message): A " site issue" is a
 # bug, display, or functionality problem with a webpage in the browser.
+webcompat.reportDesktopMode.message=Rapportera hemside bugg?
 webcompat.reportDesktopModeYes.label=Rapportera
