[cy] update from Pootle (firefox)

--- a/cy/browser/chrome/browser/devtools/webide.properties
+++ b/cy/browser/chrome/browser/devtools/webide.properties
@@ -20,7 +20,6 @@ importHostedApp_title=Agor Ap Gwesteio
 importHostedApp_header=Rhoi URL Maniffest
 
 notification_showTroubleShooting_label=Datrys Anawsterau
-notification_showTroubleShooting_accesskey=t
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
@@ -41,6 +40,7 @@ error_cantConnectToApp=Methu cysylltu â'r ap: %1$S
 
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Methu estyn y rhestr ychwanegion: %S
+
 
 addons_stable=sefydlog
 addons_unstable=ansefydlog
@@ -71,3 +71,5 @@ status_valid=DILYS
 status_warning=RHYBUDDION
 status_error=GWALLAU
 status_unknown=ANHYSBYS
+
+# Preferences
