--- a/cy/dom/chrome/dom/dom.properties
+++ b/cy/dom/chrome/dom/dom.properties
@@ -209,3 +209,5 @@ KeyNameZoomWarning=Mae gwerth KeyboardEvent.key "Zoom" yn anarferedig a bydd yn 
 KeyNameDeadKeysWarning=Mae gwerth KeyboardEvent.key "Dead" yn anarferedig a bydd yn cael ei uno gyda "Dead". Am gymorth pellach ewch i https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Mae mewnforio nodau XUL i ddogfen cynnwys yn anghymeradwy. Bydd y swyddogaeth yma'n cael ei dynnu'n fuan.
 XMLDocumentLoadPrincipalMismatch=Mae'r defnydd o document.load yn waharddedig ar Ddogfennau sy'n dod o ffenestri eraill. Dim ond y Ffenestr y mae'r Ddogfen wedi ei chreu ynddi sydd â'r hawl i alw .load ar y Ddogfen. Mae'n well defnyddio XMLHttpRequest yn lle hynny.
+# LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=Mae'r trosglwyddiad IndexedDB oedd heb ei gwblhau wedi ei atal oherwydd llywio tudalen.
