--- a/cy/toolkit/chrome/global/aboutSupport.properties
+++ b/cy/toolkit/chrome/global/aboutSupport.properties
@@ -82,3 +82,7 @@ webglRenderer = Rendrwr WebGL
 
 minLibVersions = Fersiwn lleiaf disgwyliedig
 loadedLibVersions = Fersiwn mewn defnydd
+
+hasSeccompBPF = Seccomp-BPF (Hidlo Galw System)
+canSandboxContent = Blwch Tywod Proses Cynnwys
+canSandboxMedia = Blwch Tywod Ategyn Cyfrwng
