--- a/cy/toolkit/chrome/global/aboutTelemetry.properties
+++ b/cy/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,10 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Mae'r dudalen hon yn dangos gwybodaeth am berfformiad, caledwedd, defnydd a chyfaddasiadau a gasglwyd gan y Delemetreg. Mae'r wybodaeth yn cael ei gyflwyno i %1$S er mwyn gwella %2$S.
 
+generalDataHeadingName = Enw
+
+generalDataHeadingValue = Gwerth
+
 slowSqlMain = Datganiadau SQL Araf ar y Prif Drywydd
 
 slowSqlOther = Datganiadau SQL Araf ar y Trywyddion Cynorthwyol
