--- a/cy/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/cy/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,11 +97,9 @@ quit-button.tooltiptext.linux2 = Gadael %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Gadael %1$S (%2$S)
 
-loop-call-button2.label = Cychwyn sgwrsio
-loop-call-button2.tooltiptext = Cychwyn sgwrsio
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
 
-social-share-button.label = Rhannu'r Dudalen Hon
-social-share-button.tooltiptext = Rhannu'r Dudalen Hon
 
 panic-button.label = Anghofio
 panic-button.tooltiptext = Anghofio am beth hanes pori
@@ -111,5 +109,5 @@ web-apps-button.tooltiptext = Darganfod Apiau
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = Agor WebIDE
+# %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
