--- a/cy/browser/chrome/browser/devtools/gclicommands.properties
+++ b/cy/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,9 @@ helpDesc=Cael cymorth gyda'r gorchmynion sydd ar gael
 # explain the contents of the command help table.
 helpAvailable=Gorchmynion Sydd ar Gael
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=Gorchmynion i reoli'r consol
