--- a/cy/browser/chrome/browser/shellservice.properties
+++ b/cy/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = Peidio gofyn eto
 setDefaultBrowserNever.accesskey   = P
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Porwr Rhagosodedig
+setDefaultBrowserMessage=Nid %S yw eich porwr rhagosodedig. Hoffech chi ei osod fel eich porwr arferol?
+setDefaultBrowserDontAsk=Gwiriwch bob tro wrth gychwyn %S.
 
 desktopBackgroundLeafNameWin=Desktop Background.bmp
 DesktopBackgroundDownloading=Cadw Darlun…
