--- a/nl/dom/chrome/layout/css.properties
+++ b/nl/dom/chrome/layout/css.properties
@@ -108,7 +108,7 @@ PEColorOpacityEOF=opaciteit in kleurwaarde
 PEExpectedNumber=‘%1$S’ gevonden waar getal verwacht.
 PEPositionEOF=<positie>
 PEExpectedPosition=‘%1$S’ gevonden waar <positie> verwacht.
-PEExpectedRadius=‘%1$S’ gevonden waar radius verwacht.
+PEExpectedRadius=‘%1$S’ gevonden waar straal verwacht.
 PEExpectedCloseParen=‘%1$S’ gevonden waar ‘)’ verwacht.
 PEDeclEndEOF=‘;’ of ‘}’ om declaratie te beëindigen
 PEParseDeclarationNoColon=‘%1$S’ gevonden waar ‘:’ verwacht.
