--- a/nl/security/manager/chrome/pippki/pippki.properties
+++ b/nl/security/manager/chrome/pippki/pippki.properties
@@ -69,18 +69,18 @@ pageInfo_SiteNotVerified=Identiteit van website niet geverifieerd
 pageInfo_WebSiteVerified=Identiteit van website geverifieerd
 pageInfo_Identity_Verified=De website %S ondersteunt authenticatie voor de pagina die u bekijkt. De identiteit van deze website is geverifieerd door %S, een certificatieautoriteit die u vertrouwt voor dit doeleinde.
 pageInfo_ViewCertificate=Het beveiligingscertificaat dat de identiteit van deze website verifieert bekijken.
-pageInfo_NoEncryption=Niet-beveiligde verbinding
+pageInfo_NoEncryption=Niet-versleutelde verbinding
 pageInfo_Privacy_None1=De website %S ondersteunt geen versleuteling voor de pagina die u bekijkt.
 pageInfo_Privacy_None2=Informatie die zonder versleuteling over het internet wordt verzonden kan tijdens de overdracht worden gezien door andere personen.
-pageInfo_Privacy_None3=De pagina die u bekijkt is niet beveiligd.
+pageInfo_Privacy_None3=De pagina die u bekijkt is niet versleuteld.
 # LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
-pageInfo_EncryptionWithBitsAndProtocol=Beveiligde verbinding (%1$S, %2$S-bits sleutels, %3$S)
-pageInfo_Privacy_Encrypted1=De pagina die u bekijkt was beveiligd voordat deze over het internet werd verzonden.
+pageInfo_EncryptionWithBitsAndProtocol=Versleutelde verbinding (%1$S, %2$S-bits sleutels, %3$S)
+pageInfo_Privacy_Encrypted1=De pagina die u bekijkt is versleuteld voordat deze over het internet werd verzonden.
 pageInfo_Privacy_Encrypted2=Versleuteling maakt het moeilijk voor onbevoegde personen om informatie te bekijken die tussen computers wordt uitgewisseld. Het is daarom onwaarschijnlijk dat iemand deze pagina heeft gelezen terwijl hij over het netwerk werd verzonden.
-pageInfo_MixedContent=Gedeeltelijk beveiligde verbinding
-pageInfo_Privacy_Broken1=Delen van de pagina die u bekijkt waren niet versleuteld of de versleuteling is niet sterk genoeg voordat deze over het internet werden verzonden.
+pageInfo_MixedContent=Gedeeltelijk versleutelde verbinding
+pageInfo_Privacy_Broken1=Delen van de pagina die u bekijkt zijn niet versleuteld of de versleuteling was niet sterk genoeg voordat deze over het internet werden verzonden.
 
 #Cert Viewer
 certDetails=Certificaatweergave:
@@ -149,17 +149,17 @@ addExceptionInvalidHeader=Deze website probeert zich te identificeren met ongeld
 addExceptionDomainMismatchShort=Verkeerde website
 addExceptionDomainMismatchLong2=Het certificaat behoort toe aan een andere website, wat kan betekenen dat iemand deze website probeert na te bootsen.
 addExceptionExpiredShort=Verouderde informatie
-addExceptionExpiredLong2=Het certificaat is momenteel niet geldig. Het kan zijn gestolen of vermist en gebruikt worden door iemand deze website probeert na te bootsen.
+addExceptionExpiredLong2=Het certificaat is momenteel niet geldig. Het kan zijn gestolen of vermist, en kan door iemand worden gebruikt om deze website na te bootsen.
 addExceptionUnverifiedOrBadSignatureShort=Onbekende identiteit
-addExceptionUnverifiedOrBadSignatureLong2=Het certificaat wordt niet vertrouwd, omdat het niet is geverifieerd dat het is uitgegeven door een vertrouwde autoriteit via een beveiligde ondertekening.
+addExceptionUnverifiedOrBadSignatureLong2=Het certificaat wordt niet vertrouwd, omdat het niet is geverifieerd en uitgegeven door een vertrouwde autoriteit via een beveiligde ondertekening.
 addExceptionValidShort=Geldig certificaat
 addExceptionValidLong=Deze website verzorgt geldige, geverifieerde identificatie. U hoeft geen uitzondering toe te voegen.
 addExceptionCheckingShort=Informatie controleren
-addExceptionCheckingLong2=Poging tot identificatie van de website…
+addExceptionCheckingLong2=Poging tot identificatie van deze website…
 addExceptionNoCertShort=Geen informatie beschikbaar
 addExceptionNoCertLong2=Identificatiestatus van deze website is niet te verkrijgen.
 addExceptionConnectionFailed=Verbinding mislukt
 
 #Certificate Exists in database
 caCertExistsTitle=Certificaat bestaat
-caCertExistsMessage=Het certificaat bestaat reeds.
+caCertExistsMessage=Het certificaat bestaat al.
