--- a/nl/toolkit/chrome/global/aboutSupport.properties
+++ b/nl/toolkit/chrome/global/aboutSupport.properties
@@ -83,6 +83,6 @@ webglRenderer = WebGL-renderer
 minLibVersions = Verwachte minimale versie
 loadedLibVersions = Gebruikte versie
 
-hasSeccompBPF = Seccomp-BPF (System Call Filtering)
-canSandboxContent = Content Process Sandboxing
-canSandboxMedia = Media Plugin Sandboxing
+hasSeccompBPF = Seccomp-BPF (Systeemaanroepfiltering)
+canSandboxContent = Inhoudsproces-sandboxing
+canSandboxMedia = Mediaplug-in-sandboxing
