--- a/nl/dom/chrome/security/security.properties
+++ b/nl/dom/chrome/security/security.properties
@@ -11,7 +11,7 @@ InvalidSTSHeaders=De website specificeerde een ongeldige Strict-Transport-Securi
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InvalidPKPHeaders=De website specificeerde een ongeldige Public-Key-Pins-header.
 # LOCALIZATION NOTE: Do not translate "SHA-1"
-SHA1Sig=Deze website maakt gebruikt van een SHA-1-certificaat; het wordt aanbevolen dat u certificaten met een ondertekeningsalgoritme sterker dan SHA-1 gebruikt.
+SHA1Sig=Deze website maakt gebruikt van een SHA-1-certificaat; het wordt aanbevolen dat u certificaten gebruikt met ondertekeningsalgoritmen die hashfuncties sterker dan SHA-1 gebruiken.
 InsecurePasswordsPresentOnPage=Wachtwoordvelden aanwezig op een onveilige pagina (http://). Dit vormt een beveiligingsrisico dat het stelen van gebruikersreferenties mogelijk maakt.
 InsecureFormActionPasswordsPresent=Wachtwoordvelden aanwezig in een formulier met een onveilige formulieractie (http://). Dit vormt een beveiligingsrisico dat het stelen van gebruikersreferenties mogelijk maakt.
 InsecurePasswordsPresentOnIframe=Wachtwoordvelden aanwezig op een onveilig iframe (http://). Dit vormt een beveiligingsrisico dat het stelen van gebruikersreferenties mogelijk maakt.
