--- a/nl/webapprt/webapprt/overrides/appstrings.properties
+++ b/nl/webapprt/webapprt/overrides/appstrings.properties
@@ -30,6 +30,6 @@ externalProtocolChkMsg=Mijn keuze onthouden voor alle koppelingen van dit type
 externalProtocolLaunchBtn=Toepassing starten
 malwareBlocked=De website op %S is gerapporteerd als een aanvalsite en is geblokkeerd op basis van uw beveiligingsinstellingen.
 phishingBlocked=De website op %S is gerapporteerd als een vervalsing, ontworpen om gebruikers te misleiden en persoonlijke of financiële gegevens te laten delen.
-cspFrameAncestorBlocked=Deze toepassing heeft een bron proberen te benaderen die een inhoudbeveiligingsbeleid kent dat embedding op deze manier voorkomt.
+cspBlocked=Deze toepassing heeft een bron proberen te benaderen die een inhoudbeveiligingsbeleid kent dat laden op deze manier voorkomt.
 corruptedContentError=De toepassing kan niet verdergaan met laden, omdat een fout in de gegevensoverdracht is gedetecteerd.
 remoteXUL=Deze toepassing probeerde een niet-ondersteunde technologie te gebruiken die niet meer beschikbaar is.
